# carnot-ebm

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.sandbox  GEMINI.md  LICENSE  Makefile  OPENCODE.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  pyproject.toml  research-complete.yaml  research-hardware-wishlist.md  research-program.md  research-references.md  research-roadmap-next.yaml  research-roadmap.yaml  research-studying.md  things.txt
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md  docs-keeper.md  evaluator.md  lint-checker.md  security-auditor.md  spec-reconciler.md  spec-validator.md  test-runner.md
.claude/commands/: adversarial-review.md  evaluate.md  lint.md  reconcile-specs.md  run-tests.md  security-audit.md  update-docs.md  validate-specs.md
.claude/rules/: bmad.yaml  harness.yaml  openspec.yaml  python-src.yaml  reconciliation.yaml  rust-src.yaml  tests.yaml
.gemini/: settings.json
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yml
.harness/: config.yaml
.harness/prompts/: architect.md  design.md  discovery.md  evaluator.md  generator.md  (+2 more)
.venv-npu/: pyvenv.cfg
_bmad/: architecture.md  prd.md  traceability.md
crates/carnot-boltzmann/: Cargo.toml
crates/carnot-boltzmann/src/: lib.rs
crates/carnot-constraints/: Cargo.toml
crates/carnot-constraints/src/: constraint.rs  extract.rs  lib.rs  pipeline.rs  verify.rs
crates/carnot-constraints/tests/: integration.rs  test_pipeline.rs
crates/carnot-core/: Cargo.toml
crates/carnot-core/src/: error.rs  init.rs  lib.rs  serialize.rs
crates/carnot-core/src/benchmarks/: mod.rs  runner.rs
crates/carnot-core/src/verify/: mod.rs  sudoku.rs
crates/carnot-gpu/: Cargo.toml
crates/carnot-gpu/examples/: bench_gpu_vs_cpu.rs
crates/carnot-gpu/src/: context.rs  ising_gpu.rs  lib.rs
crates/carnot-gpu/src/shaders/: ising_energy.wgsl
crates/carnot-gpu/tests/: test_ising_gpu.rs
crates/carnot-kan/: Cargo.toml
crates/carnot-kan/src/: lib.rs
crates/carnot-python/: Cargo.toml
crates/carnot-python/src/: lib.rs  pipeline.rs
crates/carnot-samplers/: Cargo.toml
crates/carnot-samplers/src/: lib.rs
crates/carnot-samplers/tests/: e2e_benchmarks.rs
crates/carnot-training/: Cargo.toml
crates/carnot-training/src/: cd.rs  lib.rs  nce.rs  optimizer.rs  score_matching.rs
crates/carnot-webgpu-gateway/: Cargo.toml  Dockerfile  docker-compose.yml
crates/carnot-webgpu-gateway/src/: gateway.rs  lib.rs  protocol.rs  worker_page.rs
data/: qa_dataset_1000.json
docs/: CNAME  api-reference.md  concepts.md  getting-started.md  huggingface-plan.md  index.html  paper.html  paper.md  technical-report.html  technical-report.md  technical-writeup.html  technical-writeup.md  usage-guide.md
examples/: README.md  batch_verify.py  code_review_pipeline.py  custom_extractor.py  math_funcs.py  mcp_integration.py  verify_api_responses.py
openspec/: config.yaml
ops/: benchmark-results.md  changelog.md  conductor-log.md  dashboard.html  dogfood-memory.json  e2e-test-plan.md  experiment-log.md  full-benchmark-v12.md  gsm8k-live-results.md  known-issues.md  latency-benchmark.md  metrics.md  multi-model-comparison.md  status.md  test-results.md  thrml-rocm-bug.md
results/: adversarial_gsm8k_data.json  adversarial_gsm8k_data_400.json  constraint_memory_live_222.json  exp181_ckpt_Gemma4-E4B-it.json  exp181_ckpt_Qwen3.5-0.8B.json  exp182_ckpt_Qwen3.5-0.8B_combined_baseline.json  exp182_ckpt_Qwen3.5-0.8B_combined_repair.json  exp182_ckpt_Qwen3.5-0.8B_combined_verify.json  exp182_ckpt_Qwen3.5-0.8B_control_baseline.json  exp182_ckpt_Qwen3.5-0.8B_control_repair.json  exp182_ckpt_Qwen3.5-0.8B_control_verify.json  exp182_ckpt_Qwen3.5-0.8B_irrelevant_injected_baseline.json  exp182_ckpt_Qwen3.5-0.8B_irrelevant_injected_repair.json  exp182_ckpt_Qwen3.5-0.8B_irrelevant_injected_verify.json  exp182_ckpt_Qwen3.5-0.8B_number_swapped_baseline.json  exp182_ckpt_Qwen3.5-0.8B_number_swapped_repair.json  exp182_ckpt_Qwen3.5-0.8B_number_swapped_verify.json  exp183_ckpt.json  exp184_ckpt_adversarial_number_swapped.json  exp184_ckpt_standard.json  exp208_ckpt.json  experiment_101_results.json  experiment_102_results.json  experiment_108_results.json  experiment_109_results.json  experiment_110_results.json  experiment_112_results.json  experiment_113_results.json  experiment_116_results.json  experiment_117_results.json  experiment_120_results.json  experiment_121_results.json  experiment_122_results.json  experiment_126_results.json  experiment_127_results.json  experiment_131_results.json  experiment_134_results.json  experiment_136_results.json  experiment_138_results.json  experiment_139_results.json  (+62 more)
scripts/: autoresearch_v6.sh  benchmark_parallel_ising.py  benchmark_pipeline.py  carnot_cli.py  check-docs-freshness.sh  check_spec_coverage.py  collect_multi_dataset_activations.py  collect_qa_activations_qwen35.py  collect_token_activations.py  collect_token_activations_large.py  collect_truthfulqa_activations.py  demo_autoresearch.py  demo_code_verification.py  demo_sat_verification.py  dogfood_carnot.py  experiment_101_agent_verification.py  experiment_102_latency_benchmark.py  experiment_109_kan_comparison.py  experiment_110_guided_decoding.py  experiment_112_embedding_benchmark.py  experiment_116_lnn_adaptive.py  experiment_117_full_benchmark.py  experiment_119_adversarial_gsm8k.py  experiment_120_adversarial_baseline.py  experiment_121_adversarial_verify_repair.py  experiment_122_adversarial_analysis.py  experiment_124_full_gsm8k_live.py  experiment_126_agent_rollback.py  experiment_127_agent_workflow.py  experiment_131_adversarial_writeup.py  experiment_134_online_learning.py  experiment_136_cross_session.py  experiment_138_guided_benchmark.py  experiment_139_arxiv_scan.py  experiment_140_guided_latency.py  experiment_141_constraint_generation.py  experiment_142_combined_learning.py  experiment_143_collect_pairs.py  experiment_144_train_jepa.py  experiment_145_jepa_fastpath.py  (+142 more)
(+533 files in other folders)
