[workspace]
resolver = "2"
members = [
    "crates/carnot-core",
    "crates/carnot-ising",
    "crates/carnot-gibbs",
    "crates/carnot-boltzmann",
    "crates/carnot-samplers",
    "crates/carnot-training",
    "crates/carnot-gpu",
    "crates/carnot-webgpu-gateway",
    "crates/carnot-constraints",
    "crates/carnot-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Carnot-EBM/carnot-ebm"
description = "Open-source Energy Based Model framework"
keywords = ["energy-based-models", "machine-learning", "ebm", "sampling", "verification"]
categories = ["science", "algorithms"]

[workspace.dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
thiserror = "2"
tracing = "0.1"
rayon = "1.10"
approx = "0.5"
