[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "carnot"
version = "0.1.0"
description = "Open-source Energy Based Model framework — Rust + JAX"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Ian Blenke"}]
keywords = [
    "energy-based-models",
    "ebm",
    "machine-learning",
    "sampling",
    "verification",
    "jax",
    "rust",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.10",
    "optax>=0.2",
    "numpy>=1.26",
    "safetensors>=0.4",
]

[project.urls]
Repository = "https://github.com/Carnot-EBM/carnot-ebm"
Documentation = "https://carnot-ebm.org"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
cuda = [
    "jax[cuda12]>=0.4.30",
]
llm = [
    "openai>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "carnot._rust"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = [
    "--cov=python/carnot",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
    "-v",
    "-n", "4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
