[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carnot"
dynamic = ["version"]
description = "Open-source Energy Based Model framework — Rust + JAX"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Ian Blenke"}]
keywords = [
    "energy-based-models",
    "ebm",
    "machine-learning",
    "sampling",
    "verification",
    "jax",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.10",
    "optax>=0.2",
    "hypothesis>=6.0",
    "numpy>=1.26",
    "safetensors>=0.4",
    "z3-solver>=4.16",
]

[project.scripts]
carnot = "carnot.cli:main"

[project.urls]
Repository = "https://github.com/Carnot-EBM/carnot-ebm"
Documentation = "https://carnot-ebm.org"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
cuda = [
    "jax[cuda12]>=0.4.30",
]
llm = [
    "openai>=1.0",
]
mcp = [
    "mcp>=1.0",
]
rust = [
    "maturin>=1.7,<2.0",
]
all = [
    "carnot[llm,mcp,rust]",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = {attr = "carnot._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/integration"]
# tests/archive/ contains tests for completed experiments and deprecated
# modules (activation-based EBMs). Run explicitly: pytest tests/archive/
addopts = [
    "--cov=python/carnot",
    "--cov-report=term-missing",
    "--cov-fail-under=99",
    "--ignore=tests/archive",
    "-v",
    "-n", "4",
]

[tool.coverage.run]
omit = [
    # Deprecated Phase 1 activation modules (proven not to work)
    "python/carnot/embeddings/activation_extractor.py",
    "python/carnot/embeddings/activation_steering.py",
    "python/carnot/embeddings/concept_vectors.py",
    "python/carnot/embeddings/hallucination_direction.py",
    "python/carnot/embeddings/layer_ebm.py",
    "python/carnot/embeddings/layer_navigator.py",
    "python/carnot/embeddings/weight_steering.py",
    "python/carnot/embeddings/jepa_energy.py",
    "python/carnot/embeddings/layer_probing.py",
    # Completed experiment modules (tests archived to tests/archive/)
    "python/carnot/pipeline/spilled_energy.py",
    "python/carnot/pipeline/factual_extractor.py",
    "python/carnot/pipeline/jepa_predictor.py",
    "python/carnot/samplers/npu_backend.py",
    "python/carnot/inference/constraint_models.py",
    "python/carnot/inference/guided_decoding.py",
    "python/carnot/models/lagoon.py",
    "python/carnot/pipeline/knowledge_base.py",
    "python/carnot/pipeline/lookahead_energy.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Maturin config — only used when building Rust extension separately
[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "carnot._rust"
python-source = "python"
