[package]
name = "carnot-boltzmann"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Boltzmann (large) tier Energy Based Model"
keywords.workspace = true
categories.workspace = true

[dependencies]
carnot-core = { path = "../carnot-core" }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
