[package]
name = "carnot-constraints"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in constraint types and verification certificates for Carnot EBM"
keywords.workspace = true
categories.workspace = true

[dependencies]
carnot-core = { path = "../carnot-core" }
carnot-ising = { path = "../carnot-ising" }
ndarray = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
