[package]
name = "carnot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core EBM traits, types, and abstractions"

[features]
default = []
f64 = []

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
bytemuck = "1"
rand_distr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
