[package]
name = "carnot-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-accelerated compute for Carnot EBMs via wgpu (Vulkan/Metal/DX12)"
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
carnot-core = { path = "../carnot-core" }
wgpu = "24"
pollster = "0.4"     # Block on async wgpu operations
bytemuck = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
ndarray = { workspace = true }
