[package]
name = "carnot-kan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
carnot-core = { path = "../carnot-core" }
ndarray = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe-code = "forbid"
