[package]
name = "carnot-samplers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCMC samplers for Energy Based Models"
keywords.workspace = true
categories.workspace = true

[dependencies]
carnot-core = { path = "../carnot-core" }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
