[package]
name = "carnot-training"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Training algorithms for Energy Based Models"

[dependencies]
carnot-core = { path = "../carnot-core" }
carnot-samplers = { path = "../carnot-samplers" }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
carnot-ising = { path = "../carnot-ising" }
